--- a/RestAssuredDemo/pom.xml
+++ b/RestAssuredDemo/pom.xml
@@ -16,6 +16,12 @@
     </plugins>
   </build>
    <dependencies>
+       <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
+       <dependency>
+           <groupId>org.seleniumhq.selenium</groupId>
+           <artifactId>selenium-java</artifactId>
+           <version>4.9.1</version>
+       </dependency>
 <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
      <dependency>
     <groupId>io.rest-assured</groupId>
@@ -33,8 +39,29 @@
     <groupId>org.hamcrest</groupId>
     <artifactId>hamcrest</artifactId>
     <version>2.2</version>
-    
 </dependency>
 
-	</dependencies>
+       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-databind</artifactId>
+           <version>2.15.1</version>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-core</artifactId>
+           <version>2.15.1</version>
+       </dependency>
+       <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+       <dependency>
+           <groupId>com.fasterxml.jackson.core</groupId>
+           <artifactId>jackson-annotations</artifactId>
+           <version>2.15.1</version>
+       </dependency>
+
+
+
+
+   </dependencies>
 </project>
